--- a/Views/Booking/HomePage.cshtml
+++ b/Views/Booking/HomePage.cshtml
@@ -140,7 +140,7 @@
 
                 // Store booking data in localStorage
                 localStorage.setItem(bookingKey + '_serviceType', selectedService);
-                localStorage.setItem(bookingKey + '_id', 'EMG-' + Math.floor(Math.random() * 10000));
+                localStorage.setItem(bookingKey + '_id', generateGUID());
                 localStorage.setItem(bookingKey + '_fullName', 'EMERGENCY PATIENT');
                 localStorage.setItem(bookingKey + '_phone', '000-000-0000');
                 localStorage.setItem(bookingKey + '_pickUpTime', new Date().toLocaleTimeString());
@@ -177,6 +177,13 @@
                     '&driverId=' + encodeURIComponent(randomDriver.driverID) +
                     '&vehicleId=' + encodeURIComponent(randomVehicle.vehicleID);
             });
+
+            function generateGUID() {
+                return 'xxxxxxxx-xxxx-4xxx-yxxx-xxxxxxxxxxxx'.replace(/[xy]/g, function (c) {
+                    const r = Math.random() * 16 | 0, v = c === 'x' ? r : (r & 0x3 | 0x8);
+                    return v.toString(16);
+                });
+            }
         });
     </script>
 }
